# onboardiq

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: config.py  main.py
backend/app/agents/: content_curator.py  graph.py  guide_generator.py  quality_evaluator.py  role_profiler.py  state.py
backend/app/agents/prompts/: content_curator.xml  guide_generator.xml  quality_evaluator.xml  role_profiler.xml
backend/app/api/: evaluations.py  guides.py  health.py  products.py  router.py
backend/app/evaluation/: llm_judge.py
backend/app/infrastructure/: cache.py  database.py  tracing.py
backend/app/models/: database.py  schemas.py
backend/app/rag/: embeddings.py  ingestion.py  reranker.py  retriever.py  vectorstore.py
backend/app/services/: guide_service.py  product_service.py
backend/data/docs/stripe/: authentication.md  error-handling.md  payments-overview.md  sdks-quickstart.md  security.md  webhooks.md
backend/scripts/: ingest_stripe_docs.py
backend/tests/: conftest.py
backend/tests/test_api/: test_evaluations.py  test_guides.py  test_health.py  test_products.py  test_schemas.py  test_services.py
backend/tests/test_integration/: test_full_pipeline.py  test_guide_persistence.py  test_sse_flow.py
backend/tests/test_rag/: test_chunking.py  test_ingestion.py  test_reranker.py  test_retriever.py
(+45 files in other folders)
